# wicore

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  PROGRESS_REPORT.md  README.md  README_WICORE_CPP.md  WICORE_MOJO_DESIGN.md  build_and_run.sh  config_template.json  download_qwen.py  go.mod  hmt.md  pixi.toml  quick_deploy.sh  readme.md  requirements.txt  setup.py  test_basic_build.py  test_batch_scheduler.py  test_hmt_validation.py  test_tensorrt_build.py  test_web_server.py  trt.md  wicore.go  wicore_cpp_engine.md
configs/: production.yaml  qwen25_7b.yaml
docs/: API.md  PERFORMANCE.md
include/: batch_scheduler.hpp  hmt_memory_manager.hpp  multimodal_processor.hpp  tensorrt_inference_engine.hpp  web_server.hpp  wicore_engine.hpp
scripts/: build.sh  setup.sh
src/: __init__.py  batch_scheduler.cpp  device_manager.mojo  hmt_memory_manager.cpp  main.cpp  model_executor.mojo  multimodal_processor.cpp  request_scheduler.mojo  tensorrt_inference_engine.cpp  web_server.cpp  wicore_engine.cpp
src/wicore/: __init__.py  __main__.py
src/wicore/attention/: __init__.py  flash_engine.py  flashinfer.py  multi_head.py  sparse_attention.py
src/wicore/core/: __init__.py  adaptive_strategy_engine.py  config.py  device_manager.py  engine.py  inference_engine.py  performance_monitor.py  simple_forward.py  simple_generator.py  simple_model_loader.py  universal_device_manager.py  universal_load_balancer.py
src/wicore/memory/: __init__.py  head_infer.py  hmt_manager.py  jenga_allocator.py  kv_cache.py  symphony.py  vtensor.py
src/wicore/routing/: __init__.py  dynamic_selector.py  evo_moe.py  inference_dynamics.py  mor_router.py  rmoe.py
src/wicore/server/: __init__.py  api_server.py
wicore-mojo/: README.md  requirements.txt
wicore-mojo/configs/: development.json  production.json
wicore-mojo/docs/: DEPLOYMENT.md
wicore-mojo/scripts/: deploy.sh  setup.sh  test_engine.py
wicore-mojo/simulation/: max_simulation.py
wicore-mojo/src/: hmt_memory_manager.mojo  web_server.mojo  wicore_engine.mojo
